--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "rollbar": "^2.5.2",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
+    "sqlite3": "^4.0.6",
     "umzug": "^2.2.0",
     "webpack": "^4.29.0"
   },
