--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "student's redis-like task manager web-app",
   "engines": {
-    "node": "11.x"
+    "node": "9"
   },
   "main": "index.js",
   "scripts": {
@@ -104,6 +104,6 @@
     "jest-supertest-matchers": "0.0.1",
     "nodemon": "^1.18.9",
     "supertest": "^3.3.0",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.2.3"
   }
 }
