--- a/package.json
+++ b/package.json
@@ -66,12 +66,14 @@
     "koa-generic-session": "^2.0.1",
     "koa-logger": "^3.2.0",
     "koa-methodoverride": "^2.0.0",
+    "koa-passport": "^4.1.1",
     "koa-pug": "^3.0.0-2",
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-webpack": "^5.2.1",
     "lodash": "^4.17.11",
     "node-sass": "^4.11.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.8.0",
     "pg-hstore": "^2.3.2",
     "popper.js": "^1.14.7",
