--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "css-loader": "^2.1.0",
     "debug": "^4.1.1",
     "dotenv": "^6.2.0",
+    "faker": "^4.1.0",
     "gulp": "^4.0.0",
     "gulp-cli": "^2.0.1",
     "gulp-util": "^3.0.8",
