--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "collectCoverage": true,
     "testPathIgnorePatterns": [
       "/node_modules/",
-      "/__tests__/__fixtures__"
+      "/__tests__/__fixtures__",
+      "/__tests__/util"
     ]
   },
   "dependencies": {
