--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "student's redis-like task manager web-app",
   "engines": {
-    "node": "9"
+    "node": "11.9"
   },
   "main": "index.js",
   "scripts": {
@@ -48,17 +48,17 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-flow": "^7.0.0",
     "@babel/register": "^7.0.0",
-    "acorn": "^6.0.7",
+    "acorn": "^6.1.0",
     "autoprefixer": "^9.4.7",
     "babel-loader": "^8.0.5",
     "babel-register": "^6.26.0",
-    "bootstrap": "^4.2.1",
+    "bootstrap": "^4.3.1",
     "css-loader": "^2.1.0",
     "debug": "^4.1.1",
     "dotenv": "^6.2.0",
-    "faker": "^4.1.0",
     "gulp": "^4.0.0",
     "gulp-cli": "^2.0.1",
+    "gulp-if": "^2.0.2",
     "gulp-util": "^3.0.8",
     "jquery": "^3.3.1",
     "jquery-ujs": "^1.2.2",
@@ -87,9 +87,9 @@
     "sequelize-cli": "^5.4.0",
     "sqlite3": "^4.0.6",
     "style-loader": "^0.23.1",
-    "terser": "^3.14.1",
+    "terser": "^3.16.1",
     "umzug": "^2.2.0",
-    "webpack": "^4.29.0"
+    "webpack": "^4.29.3"
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
@@ -98,15 +98,16 @@
     "eslint": "^5.12.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-flowtype": "^3.2.0",
+    "eslint-plugin-flowtype": "^3.4.1",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^22.1.2",
+    "eslint-plugin-jest": "^22.3.0",
+    "faker": "^4.1.0",
     "flow-bin": "^0.87.0",
     "flow-typed": "^2.5.1",
     "jest": "^23.6.0",
     "jest-cli": "^23.6.0",
-    "jest-supertest-matchers": "0.0.1",
-    "nodemon": "^1.18.9",
+    "jest-supertest-matchers": "^0.0.2",
+    "nodemon": "^1.18.10",
     "supertest": "^3.3.0",
     "webpack-cli": "^3.2.3"
   }
