--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
   },
   "dependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
+    "@babel/core": "^7.3.3",
     "@babel/node": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/plugin-proposal-throw-expressions": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/polyfill": "^7.2.5",
@@ -49,13 +49,15 @@
     "@babel/preset-flow": "^7.0.0",
     "@babel/register": "^7.0.0",
     "acorn": "^6.1.0",
-    "autoprefixer": "^9.4.7",
+    "autoprefixer": "^9.4.8",
     "babel-loader": "^8.0.5",
     "babel-register": "^6.26.0",
     "bootstrap": "^4.3.1",
     "css-loader": "^2.1.0",
+    "date-fns": "^1.30.1",
     "debug": "^4.1.1",
     "dotenv": "^6.2.0",
+    "file-loader": "^3.0.1",
     "gulp": "^4.0.0",
     "gulp-cli": "^2.0.1",
     "gulp-if": "^2.0.2",
@@ -74,38 +76,42 @@
     "koa-static": "^5.0.0",
     "koa-webpack": "^5.2.1",
     "lodash": "^4.17.11",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
+    "open-iconic": "^1.1.1",
     "passport-local": "^1.0.0",
-    "pg": "^7.8.0",
+    "pg": "^7.8.1",
     "pg-hstore": "^2.3.2",
     "popper.js": "^1.14.7",
     "postcss": "^7.0.14",
     "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
     "rollbar": "^2.5.2",
     "sass-loader": "^7.1.0",
+    "save-dev": "^2.0.0",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
     "sqlite3": "^4.0.6",
     "style-loader": "^0.23.1",
     "terser": "^3.16.1",
     "umzug": "^2.2.0",
-    "webpack": "^4.29.3"
+    "webpack": "^4.29.5"
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
-    "eslint": "^5.12.0",
+    "babel-jest": "^24.1.0",
+    "eslint": "^5.14.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-flowtype": "^3.4.1",
+    "eslint-plugin-flowtype": "^3.4.2",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.3.0",
     "faker": "^4.1.0",
     "flow-bin": "^0.87.0",
     "flow-typed": "^2.5.1",
-    "jest": "^23.6.0",
-    "jest-cli": "^23.6.0",
+    "jest": "^24.1.0",
+    "jest-cli": "^24.1.0",
     "jest-supertest-matchers": "^0.0.2",
     "nodemon": "^1.18.10",
     "supertest": "^3.3.0",
