--- a/config/config.json
+++ b/config/config.json
@@ -8,10 +8,6 @@
     "dialect": "sqlite"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "use_env_variable": "DATABASE_URL",
-    "dialect": "postgres"
+    "use_env_variable": "DATABASE_URL"
   }
 }
