--- a/package.json
+++ b/package.json
@@ -32,6 +32,11 @@
   "jest": {
     "testEnvironment": "node",
     "collectCoverage": true,
+    "collectCoverageFrom": [
+      "lib/*.js",
+      "routes/*.js",
+      "models/*.js"
+    ],
     "testPathIgnorePatterns": [
       "/node_modules/",
       "/__tests__/__fixtures__",
@@ -58,6 +63,7 @@
     "date-fns": "^1.30.1",
     "debug": "^4.1.1",
     "dotenv": "^6.2.0",
+    "faker": "^4.1.0",
     "file-loader": "^3.0.1",
     "gulp": "^4.0.0",
     "gulp-cli": "^2.0.1",
@@ -108,7 +114,6 @@
     "eslint-plugin-flowtype": "^3.4.2",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "^22.3.0",
-    "faker": "^4.1.0",
     "flow-bin": "^0.87.0",
     "flow-typed": "^2.5.1",
     "jest": "^24.1.0",
