--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "npm": "6.7.0"
   },
   "main": "index.js",
+  "bin": "./bin/server",
   "scripts": {
     "test": "jest",
-    "start": "gulp server",
+    "server:hot": "npx --env development nodemon ./bin/server server",
+    "server": "node ./bin/server server",
     "build": "npx webpack -p --env production && npx sequelize db:migrate",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build",
+    "repl": "npx ./bin/server console"
   },
   "repository": {
     "type": "git",
@@ -58,17 +61,14 @@
     "babel-loader": "^8.0.5",
     "babel-register": "^6.26.0",
     "bootstrap": "^4.3.1",
+    "commander": "^3.0.0",
     "css-loader": "^2.1.0",
     "date-fns": "^1.30.1",
     "debug": "^4.1.1",
     "dotenv": "^6.2.0",
     "faker": "^4.1.0",
     "file-loader": "^3.0.1",
-    "gulp": "^4.0.0",
-    "gulp-cli": "^2.0.1",
-    "gulp-if": "^2.0.2",
-    "gulp-util": "^3.0.8",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.0",
     "jquery-ujs": "^1.2.2",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
@@ -81,9 +81,9 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-webpack": "^5.2.1",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "open-iconic": "^1.1.1",
     "passport-local": "^1.0.0",
     "pg": "^7.8.1",
@@ -95,9 +95,9 @@
     "rollbar": "^2.5.2",
     "sass-loader": "^7.1.0",
     "save-dev": "^2.0.0",
-    "sequelize": "^4.42.0",
-    "sequelize-cli": "^5.4.0",
-    "sqlite3": "^4.0.6",
+    "sequelize": "^6.0.0",
+    "sequelize-cli": "^5.5.0",
+    "sqlite3": "^4.0.9",
     "style-loader": "^0.23.1",
     "terser": "^3.16.1",
     "umzug": "^2.2.0",
@@ -118,6 +118,7 @@
     "jest-supertest-matchers": "^0.0.2",
     "nodemon": "^1.18.10",
     "supertest": "^3.3.0",
+    "tar": "^4.4.8",
     "webpack-cli": "^3.2.3"
   }
 }
